--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,31 @@
-#div1, #div2, #div3, #div4, #div5, #div6 {
+#drag1, #drag2, #drag3, #drag4, #drag5, #drag6 {
   height: 300px;
   width: 200px;
   margin: 20px;
   border: 2px solid black;
 }
 
-#div1 {
+#drag1 {
   background-image: url("https://picsum.photos/id/237/200/300");
 }
 
-#div2 {
+#drag2 {
   background-image: url("https://picsum.photos/seed/picsum/200/300");
 }
 
-#div3 {
+#drag3 {
   background-image: url("https://picsum.photos/200/300?grayscale");
 }
 
-#div4 {
+#drag4 {
   background-image: url("https://picsum.photos/200/300/");
 }
 
-#div5 {
+#drag5 {
   background-image: url("https://picsum.photos/200/300.jpg");
 }
 
-#div6 {
+#drag6 {
   background-image: url("https://picsum.photos/id/102/200/300");
 }
 
