--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,31 @@
-#drag1, #drag2, #drag3, #drag4, #drag5, #drag6 {
+#div1, #div2, #div3, #div4, #div5, #div6 {
   height: 300px;
   width: 200px;
   margin: 20px;
   border: 2px solid black;
 }
 
-#drag1 {
+#div1 {
   background-image: url("https://picsum.photos/id/237/200/300");
 }
 
-#drag2 {
+#div2 {
   background-image: url("https://picsum.photos/seed/picsum/200/300");
 }
 
-#drag3 {
+#div3 {
   background-image: url("https://picsum.photos/200/300?grayscale");
 }
 
-#drag4 {
+#div4 {
   background-image: url("https://picsum.photos/200/300/");
 }
 
-#drag5 {
+#div5 {
   background-image: url("https://picsum.photos/200/300.jpg");
 }
 
-#drag6 {
+#div6 {
   background-image: url("https://picsum.photos/id/102/200/300");
 }
 
