--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-#div1, #div2, #div3, #div4, #div5, #div6 {
-  height: 300px;
-  width: 200px;
-  margin: 20px;
-  border: 2px solid black;
-}
-
 #div1 {
   background-image: url("https://picsum.photos/id/237/200/300");
 }
@@ -29,6 +22,16 @@
   background-image: url("https://picsum.photos/id/102/200/300");
 }
 
+.image {
+  height: 300px;
+  width: 200px;
+  margin: 20px;
+  background-size: cover;
+  background-position: center;
+  cursor: move;
+  border: 2px solid transparent;
+}
+
 .flex {
   display: flex;
   justify-content: center;
@@ -36,6 +39,11 @@
   flex-wrap: wrap;
 }
 
-.selected {
-  border: 5px solid rgb(0, 195, 255);
+.dragging {
+  border: 2px solid #000;
+  opacity: 0.5;
+}
+
+.over {
+  border: 2px dashed #000;
 }
