--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,61 @@
 #div1 {
-  background-image: url("https://picsum.photos/id/237/200/300");
-}
-
-#div2 {
-  background-image: url("https://picsum.photos/seed/picsum/200/300");
-}
-
-#div3 {
-  background-image: url("https://picsum.photos/200/300?grayscale");
-}
-
-#div4 {
-  background-image: url("https://picsum.photos/200/300/");
-}
-
-#div5 {
-  background-image: url("https://picsum.photos/200/300.jpg");
-}
-
-#div6 {
-  background-image: url("https://picsum.photos/id/102/200/300");
-}
-
-.image {
-  height: 300px;
-  width: 200px;
-  margin: 20px;
-  background-size: cover;
-  background-position: center;
-  cursor: move;
-  border: 2px solid transparent;
-}
-
-.flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.dragging {
-  border: 2px solid #000;
-  opacity: 0.5;
-}
-
-.over {
-  border: 2px dashed #000;
-}
+    background-image: url("https://picsum.photos/id/237/200/300");
+    height: 300px;
+    width: 200px;
+    margin: 20px;
+  }
+  #div2 {
+    background-image: url("https://picsum.photos/seed/picsum/200/300");
+    height: 300px;
+    width: 200px;
+    margin: 20px;
+  }
+  #div3 {
+    background-image: url("https://picsum.photos/200/300?grayscale");
+    height: 300px;
+    width: 200px;
+    margin: 20px;
+  }
+  #div4 {
+    background-image: url("https://picsum.photos/200/300/");
+    height: 300px;
+    width: 200px;
+    margin: 20px;
+  }
+  #div5 {
+    background-image: url("https://picsum.photos/200/300.jpg");
+    height: 300px;
+    width: 200px;
+    margin: 20px;
+  }
+  #div6 {
+    background-image: url("https://picsum.photos/id/102/200/300");
+    height: 300px;
+    width: 200px;
+    margin: 20px;
+  }
+  div.container {
+    border: 5px solid #555;
+  }
+  .flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .selected {
+    border: 5px solid rgb(0, 195, 255);
+  }
+  p {
+    text-align: center;
+  }
+  button {
+    margin: 20px;
+  }
+  .image{
+      text-align: center;
+      line-height: 300px;
+      color: white;
+      font-weight: bold;
+      cursor: grab;
+      border: 1px solid #ccc;
+  }
